Noteworthy updates to the xfce4 panel should be recorded here.

* 2003-09-30  Jasper Huijsmans <huysmans@users.sourceforge.net>

Fix crash when config file is corrupted. Still no clue about why the
corruption occurs in the first place :( 

* 2003-09-14  Jasper Huijsmans <huysmans@users.sourceforge.net>

Documentation updated to new default configuration and other improvements.

* 2003-08-07  Jasper Huijsmans <huysmans@users.sourceforge.net>

Important i18n fix in xfce_support.c. Dialogs are now properly translated.

* 2003-07-25  Jasper Huijsmans <huysmans@users.sourceforge.net>

Improved autohide handling and reorientation.

* 2003-07-18  Olivier Fourdan <fourdan@xfce.org>

Update default configuration

* 2003-07-18  Jasper Huijsmans <huysmans@users.sourceforge.net>

Update plugin API to prevent old plugins from crashing the panel.

* 2003-07-09  Jasper Huijsmans <huysmans@users.sourceforge.net>

Removed 'revert' functionality from the panel. This changes plugin API. All
plugins must be recompiled and plugins providing options need to update to use
the new API.

* 2003-06-17  Benedikt Meurer <Benedikt.Meurer@unix-ag.uni-siegen.de>

Added async-exec patch to improve the responsiveness of the UI.


