@@ -1,5 +1,11 @@
 Noteworthy updates to the xfce4 panel should be recorded here.
 
+* 2003-10-10  Jasper Huijsmans <jasper@moongroup.com>
+
+Add xinerama aware smart positioning. Keeps panel inside the screen and, if it
+was before, centered. Only autohide when panel is on one of the the screen 
+edges.
+
 * 2003-09-30  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 Fix crash when config file is corrupted. Still no clue about why the
